@@ -1,3 +1,6 @@
+ftransc 5.0.7 (04 Nov 2012):
+	+ Added cover art insertion support to flac files
+
 ftransc 5.0.6 (03 Nov 2012):
 	+ Fixed bug when disk number is present in the metadata which caused all
 	metadata to be dropped
